--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,17 @@
 {
-    "name": ":vendor_slug/:package_slug",
-    "description": ":package_description",
+    "name": "furkangm/filament-page-manager",
+    "description": "Filament page manager",
     "keywords": [
-        ":vendor_name",
+        "FurkanGM",
         "laravel",
-        ":package_slug"
+        "filament-page-manager"
     ],
-    "homepage": "https://github.com/:vendor_slug/:package_slug",
+    "homepage": "https://github.com/furkangm/filament-page-manager",
     "license": "MIT",
     "authors": [
         {
-            "name": ":author_name",
-            "email": "author@domain.com",
+            "name": "Furkan Gezek",
+            "email": "furkangezek2014@gmail.com",
             "role": "Developer"
         }
     ],
@@ -38,13 +38,13 @@
     },
     "autoload": {
         "psr-4": {
-            "VendorName\\Skeleton\\": "src",
-            "VendorName\\Skeleton\\Database\\Factories\\": "database/factories"
+            "FurkanGM\\FilamentPageManager\\": "src",
+            "FurkanGM\\FilamentPageManager\\Database\\Factories\\": "database/factories"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "VendorName\\Skeleton\\Tests\\": "tests"
+            "FurkanGM\\FilamentPageManager\\Tests\\": "tests"
         }
     },
     "scripts": {
@@ -67,10 +67,10 @@
     "extra": {
         "laravel": {
             "providers": [
-                "VendorName\\Skeleton\\SkeletonServiceProvider"
+                "FurkanGM\\FilamentPageManager\\FilamentPageManagerServiceProvider"
             ],
             "aliases": {
-                "Skeleton": "VendorName\\Skeleton\\Facades\\Skeleton"
+                "FilamentPageManager": "FurkanGM\\FilamentPageManager\\Facades\\FilamentPageManager"
             }
         }
     },
